aks-dev/16-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetbase-queue
  namespace: fleetbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetbase-queue
  template:
    metadata:
      labels:
        app: fleetbase-queue
    spec:
      containers:
        - name: queue
          image: fleetbase/fleetbase-api:latest
          args: ["php", "artisan", "queue:work"]
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
