aks-dev/17-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetbase-scheduler
  namespace: fleetbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetbase-scheduler
  template:
    metadata:
      labels:
        app: fleetbase-scheduler
    spec:
      containers:
        - name: scheduler
          image: fleetbase/fleetbase-api:latest
          args: ["go-crond", "--verbose", "root:./crontab"]
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
