aks-dev/10-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fleetbase-mysql
  namespace: fleetbase
spec:
  serviceName: fleetbase-mysql
  replicas: 1
  selector:
    matchLabels:
      app: fleetbase-mysql
  template:
    metadata:
      labels:
        app: fleetbase-mysql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mysql
          image: mysql:8.0-oracle
          args: ["--skip-log-bin"]
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 6
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 6
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: managed-premium
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fleetbase-mysql
  namespace: fleetbase
spec:
  clusterIP: None
  selector:
    app: fleetbase-mysql
  ports:
    - port: 3306
      targetPort: 3306
