aks-dev/15-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetbase-application
  namespace: fleetbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetbase-application
  template:
    metadata:
      labels:
        app: fleetbase-application
    spec:
      containers:
        - name: application
          image: fleetbase/fleetbase-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: storage-app
              mountPath: /fleetbase/api/storage/app
      volumes:
        - name: storage-app
          persistentVolumeClaim:
            claimName: fleetbase-storage-app
---
apiVersion: v1
kind: Service
metadata:
  name: fleetbase-application
  namespace: fleetbase
spec:
  selector:
    app: fleetbase-application
  ports:
    - port: 8000
      targetPort: 8000
